...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.75">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Assignments"
                android:fontFamily="sans-serif-light"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:layout_marginRight="1sp"/>

...
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end">
            <ImageButton
                android:id="@+id/add_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_add_white_24dp"
                android:background="@drawable/button_bg"/>
            <ImageButton
                android:id="@+id/delete_button"
...
