<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/fragment_todo_relative_layout" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/todo_toolbar" />

        <ListView
            android:background="@drawable/ab_background_textured_example"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/toDolist"
            android:divider="@android:color/transparent"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/AddToDoItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_white_24dp"/>

</RelativeLayout>
